Windows Clink/cmd.exe support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,6 @@ atty = "0.2"
 blake2 = "0.8.0"
 clap = "2.32.0"
 dirs = "1.0.4"
-exec = "0.3.1"
 failure = "0.1.5"
 hex = "0.3.2"
 ketos = "0.11"
@@ -27,6 +26,7 @@ shellexpand = "1.0.0"
 ed25519-dalek = "1.0.1"
 ed25519 = "1.1.1"
 rand = "0.7"
+sysinfo = "0.23.2"
 [dev-dependencies]
 quickcheck = "1.0.3"
 quickcheck_macros = "1.0.0"
